--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li><a href="public/contact.html">Contact Me</a></li>
     </ul>
     <footer>
-        <p>© Wilfred Patrick, 2023. All right reserved</p>
+        <p>© Coded by Wilfred Patrick</p>
     </footer>
     
 </body>
